---- Changes since 1.140 ----
Added an option to have environment variable substitution done on edited filenames.
---- Changes since 1.150 ----
Added an option to clear Webmin-related environment variables before running a command.
---- Changes since 1.210 ----
File editors can how have parameters, which are substituted into the filename before editing.
---- Changes since 1.220 ----
Added a new type of command - an SQL query or update that will be performed against a database for which a Perl DBI driver is installed.
---- Changes since 1.230 ----
If other servers are defined in the Webmin Servers Index module, custom commands can be configured to run on one or more other Webmin hosts in a cluster.
---- Changes since 1.250 ----
The output from a command is now shown as it is generated, for commands run locally.
Added a Module Config parameter to change the number of columns used to display command buttons in.
---- Changes since 1.270 ----
The contents of uploaded files are no longer logged.
---- Changes since 1.340 ----
Removed the Module Config option to control if a shell is used when executing a command as a user, since we can now work this out automatically.
---- Changes since 1.390 ----
Re-designed the user interface somewhat, and converted all code to use the new Webmin UI library.
When commands are shown in a table and no parameters are needed, the names now link directly to run the command.
---- Changes since 1.400 ----
Added a popup progress tracker to commands with file upload fields.
---- Changes since 1.410 ----
All links to commands are via an ID number rather than an index, which makes them easier to link to from other web pages.
---- Changes since 1.450 ----
Added a parameter-level option to make the parameter mandatory.
---- Changes since 1.500 ----
Added a button to clone an existing command when editing.