@@ -6,8 +6,7 @@ require './custom-lib.pl';
 &ui_print_header(undef, $text{'index_title'}, "", "intro", 1, 1);
 
 @cust = grep { &can_run_command($_) } &list_commands();
-@cust = sort { local $o = $b->{'order'} <=> $a->{'order'};
-	       $o ? $o : $a->{'id'} <=> $b->{'id'} } @cust;
+@cust = &sort_commands(@cust);
 
 # Build links
 @links = ( );
